--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,18 +1,18 @@
 modLoader="javafml"
 loaderVersion="[${loader_version},)"
 license="All rights reserved"
-issueTrackerURL="https://github.com/MeinKraft/Crimson-Magnet/issues" #optional
+issueTrackerURL="https://github.com/MeinKraft/Crimson-XP/issues" #optional
 
 [[mods]]
 modId="crimsonxp"
 version="${version}"
 displayName="Crimson XP"
-displayURL="http://crimsonfluff.com/"
-updateJSONURL = "https://github.com/MeinKraft/Crimson-Magnet/raw/main/update.json"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/crimson-xp-charm"
+updateJSONURL = "https://github.com/MeinKraft/Crimson-XP/raw/main/update.json"
 authors="§4Crimson_Fluff"
 logoFile="logo.png" #optional
 credits="\n§bTechnovision§r for his awesome modding YouTube series\n§bTurtyWurty§r for his awesome modding YouTube series" #optional
-description=''' "Attraction is in the eye of the beholder" '''
+description=''' "Experienced in the art of attraction" '''
 
 [[dependencies.crimsonxp]]
     modId="minecraft"
